2008-10-07  Hui Zhu  <teawater@gmail.com>

	* i386-tdep.c, infrun.c, linux-record.c, linux-record.h,
	record.c, record.h: Change name from
	"record and reverse target" to
	"process record and replay target".

2008-10-06  Michael Snyder  <msnyder@vmware.com>

	* breakpoint.c (breakpoint_silence): Rename to make_breakpoint_silent.
	* breakpoint.h: Ditto.
	* infcmd.c (finish_backward): Call make_breakpoint_silent
	instead of breakpoint_silence.

	* infcmd.c (finish_command): Reject async in reverse.
	* infcmd.c (finish_command): Use i18n macros.
	* infcmd.c: Minor function reordering.
	* infrun.c (step_into_function): Rename to stepped_into_function.
	Split into two versions (normal (forward), and reverse).
	(handle_inferior_event): Call stepped_into_function or 
	stepped_into_function_backward, depending on exec_direction.
	* infrun.c (handle_inferior_event): Comment rewording.
	* remote.c (remote_get_exec_direction): Use i18n macros.
	(remote_set_exec_direction): Ditto.
	* infrun.c (handle_inferior_event, step_into_function): Formatting.
	* infrun.c (handle_inferior_event): Formatting, spelling fix.

	* infrun.c (handle_inferior_event): Add special case for
	"next" in reverse.

2008-10-04  Hui Zhu  <teawater@gmail.com>

	Change from "to_prepare_to_store" to "to_store_registers".
	* record.c (record_beneath_to_prepare_to_store): Removed.
	(record_beneath_to_store_registers): New function pointer.
	Instead "record_beneath_to_prepare_to_store". Will point
	to the low strata target "to_store_registers" function.
	(record_prepare_to_store): Removed.
	(record_store_registers): New function.
	Instead "record_prepare_to_store". Record the change of
	registers from GDB.
	(init_record_ops): Change record_prepare_to_store to
	record_store_registers.
	* record.h (record_beneath_to_prepare_to_store): Removed.
	(record_beneath_to_store_registers): New extern.
	* target.c (update_current_target): Change
	record_beneath_to_prepare_to_store to
	record_beneath_to_store_registers.
